2008-06-20  Esteban Sanchez  <estebans@artica.es>

	* include/functions_reporting.php: Deleted reference to localhost. Align 
	times fired colum. Show priority string instead on alerts.

	* include/functions.php: Show only one decimal by default on 
	format_numeric() and format_for_graph(). Cut alert name, agent name 
	and module name. Style correction.

	* include/functions_db.php: Function give_moduleinterval() renamed to 
	get_module_interval() and fixed a typo with variable name. On 
	get_previous_data() get the data if it's not older than the interval.
	Order datas on min, max and sum calculation by the timestamp. Fixed and 
	improved the sumatory calculation.

	* operation/agentes/status_monitor.php: Ignore disabled modules.

	* operation/reporting/reporting_viewer.php: Do not use format_for_graph(),
	but format_numeric() instead.

2008-06-19  Sancho Lerena  <slerena@gmail.com>

	* Fixed some typos.

	* Fixed bad conflict resolution commit in functions_db.php

	* include/functions_reporting.php
	include/config.php
	include/functions.php
	include/functions_db.php
	operation/agentes/estado_grupo.php
	operation/agentes/estado_agente.php
	operation/agentes/estado_monitores.php
	operation/agentes/tactical.php
	operation/agentes/networkmap.php
	godmode/agentes/module_manager.php
	godmode/agentes/agent_manager.php: Several fixes for module disabled issue

2008-06-18  Esteban Sanchez  <estebans@artica.es>

	* include/functions_db.php: Fixed an error on
	get_db_all_rows_sqlfree().

2008-06-18  Esteban Sanchez  <estebans@artica.es>

	* include/functions_db.php: Added documentation to all the functions
	using javadoc style. Deleted unused and useless functions. Style
	correction. User pandora database functions in functions that getss
	simples values. Replace lang_label with lang_string().

	* include/functions_reporting_pdf.php,
	operation/reporting/reporting_viewer_pdf.php,
	operation/visual_console/render_view.php,